--- a/index.html
+++ b/index.html
@@ -190,6 +190,19 @@
               </div>
 
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
+                <a href="deniz-vagzali.html" class="portfolio-item item-portrait isotope-item gsap-reveal-img " data-id="8">
+                    <div class="overlay">
+                      <span class="wrap-icon icon-link2"></span>
+                      <div class="portfolio-item-content">
+                        <h3>Dəniz Vağzalı</h3>
+                        <p>product, branding, parking</p>
+                      </div>
+                    </div>
+                    <img src="images/Deniz-vagzali/2.jpg" class="lazyload  img-fluid" alt="Dəniz Vağzalı" />
+                  </a>
+              </div>
+
+              <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
                 <a href="bizim-tarla-yashil-noxud.html" class="portfolio-item item-portrait isotope-item gsap-reveal-img " data-id="8">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
